--- a/style.css
+++ b/style.css
@@ -80,3 +80,16 @@ body{
       align-items: center;
       justify-content: center;
   }
+
+.delete-button {
+    background-color: transparent;
+    border: none;
+    cursor: pointer;
+    font-size: 16px;
+    color: #ff0000; 
+    transition: color 0.3s ease;
+}
+
+.delete-button:hover {
+    color: #cc0000;
+}
